Don't crash on illegal patternless /unban <channel>.

BUG:307507